--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
-blank_issues_enabled: false
+blank_issues_enabled: true
 contact_links:
     - name: Feature Request / Idea
       url: https://github.com/Kilo-Org/kilocode/discussions/new?category=1-feature-requests
