🔧 chore(gitignore): remove unused ignore entries
- remove .mcp-server-running and trailing newline for cleanup

♻️ refactor(mcp): update server command execution

- change command to use bash for better path handling
- simplify args to execute directly without separate cwd

📝 docs(README): update setup and workflow instructions

- add tsx as a required dev dependency
- remove build and start steps for direct execution

♻️ refactor(package): modify main entry point and scripts

- change main from build/index.js to src/index.ts
- remove build and start scripts for direct execution via tsx

--- a/repo-mcp-server/package.json
+++ b/repo-mcp-server/package.json
@@ -2,11 +2,9 @@
 	"name": "repo-mcp-server",
 	"version": "0.1.0",
 	"description": "MCP Server for i18n translation management",
-	"main": "build/index.js",
+	"main": "src/index.ts",
 	"type": "module",
 	"scripts": {
-		"build": "tsc && chmod 755 build/index.js",
-		"start": "node build/index.js",
 		"dev": "tsx src/index.ts",
 		"watch": "tsx watch src/index.ts"
 	},
