Add missing view.sidebar.name (fixes https://github.com/Kilo-Org/kilocode/issues/460)

--- a/src/package.json
+++ b/src/package.json
@@ -119,7 +119,7 @@
 				{
 					"type": "webview",
 					"id": "kilo-code.SidebarProvider",
-					"name": ""
+					"name": "%views.sidebar.name%"
 				}
 			]
 		},
