--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
 		"build:nightly": "pnpm --filter @roo-code/vscode-nightly vsix",
 		"changeset:version": "cp CHANGELOG.md src/CHANGELOG.md && changeset version && cp -vf src/CHANGELOG.md .",
 		"knip": "pnpm --filter @roo-code/build build && knip --include files",
-		"update-contributors": "node scripts/update-contributors.js",
-		"lru-cache": "^11.1.0"
+		"update-contributors": "node scripts/update-contributors.js"
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "^0.5.1",
