Make release workflow scripts more robust and adjust changelog to conform

--- a/.github/workflows/marketplace-publish.yml
+++ b/.github/workflows/marketplace-publish.yml
@@ -83,7 +83,11 @@ jobs:
 
                   # Extract changelog for current version
                   echo "Extracting changelog for version ${current_package_version}"
-                  changelog_content=$(sed -n "/## \\[${current_package_version}\\]/,/## \\[/p" CHANGELOG.md | sed '$d')
+                  # Try with 'v' prefix first (newer format), then without (older format)
+                  changelog_content=$(sed -n "/## \\[v${current_package_version}\\]/,/## \\[/p" CHANGELOG.md | sed '$d')
+                  if [ -z "$changelog_content" ]; then
+                    changelog_content=$(sed -n "/## \\[${current_package_version}\\]/,/## \\[/p" CHANGELOG.md | sed '$d')
+                  fi
 
                   # If changelog extraction failed, use a default message
                   if [ -z "$changelog_content" ]; then
