--- a/.github/workflows/changeset-release.yml
+++ b/.github/workflows/changeset-release.yml
@@ -19,6 +19,7 @@ jobs:
             ( github.event_name == 'pull_request' &&
             github.event.pull_request.merged == true &&
             github.event.pull_request.base.ref == 'main' &&
+            !contains(github.event.pull_request.title, 'Changeset version bump') &&
             github.actor != 'kilocode-bot' ) ||
             github.event_name == 'workflow_dispatch'
         runs-on: ubuntu-latest
@@ -66,60 +67,56 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.CROSS_REPO_ACCESS_TOKEN }}
 
-    # Job 2: Process version bump PR created by kilocode-bot
-    changeset-pr-edit-approve:
-        name: Auto approve Bump version PRs
-        runs-on: ubuntu-latest
-        permissions:
-            contents: write
-            pull-requests: write
-        if: >
-            github.event_name == 'pull_request' &&
-            github.event.pull_request.base.ref == 'main' &&
-            github.actor == 'kilocode-bot' &&
-            contains(github.event.pull_request.title, 'Changeset version bump')
-        steps:
-            - name: Determine checkout ref
-              id: checkout-ref
-              run: |
-                  echo "Event action: ${{ github.event.action }}"
-                  echo "Actor: ${{ github.actor }}"
-                  echo "Head ref: ${{ github.head_ref }}"
-                  echo "PR SHA: ${{ github.event.pull_request.head.sha }}"
-
-                  if [[ "${{ github.event.action }}" == "opened" && "${{ github.actor }}" == "kilocode-bot" ]]; then
-                    echo "Using branch ref: ${{ github.head_ref }}"
-                    echo "git_ref=${{ github.head_ref }}" >> $GITHUB_OUTPUT
-                  else
-                    echo "Using SHA ref: ${{ github.event.pull_request.head.sha }}"
-                    echo "git_ref=${{ github.event.pull_request.head.sha }}" >> $GITHUB_OUTPUT
-                  fi
-
-            - name: Checkout Repo
-              uses: actions/checkout@v4
+            # Remove changelog-ready label from changeset PR if present
+            - name: Remove changelog-ready label from changeset PR
+              if: steps.changesets.outputs.pullRequestNumber
+              uses: actions/github-script@v7
               with:
-                  token: ${{ secrets.CROSS_REPO_ACCESS_TOKEN }}
-                  fetch-depth: 0
-                  ref: ${{ steps.checkout-ref.outputs.git_ref }}
+                  github-token: ${{ secrets.CROSS_REPO_ACCESS_TOKEN }}
+                  script: |
+                      try {
+                        await github.rest.issues.removeLabel({
+                          owner: context.repo.owner,
+                          repo: context.repo.repo,
+                          issue_number: ${{ steps.changesets.outputs.pullRequestNumber }},
+                          name: 'changelog-ready'
+                        });
+                        console.log('Removed changelog-ready label from changeset PR');
+                      } catch (error) {
+                        if (error.status === 404) {
+                          console.log('changelog-ready label was not present on changeset PR');
+                        } else {
+                          throw error;
+                        }
+                      }
 
             # Get current and previous versions to edit changelog entry
             - name: Get version
               id: get_version
               run: |
-                  VERSION=$(git show HEAD:package.json | jq -r '.version')
+                  VERSION=$(git show HEAD:src/package.json | jq -r '.version')
                   echo "version=$VERSION" >> $GITHUB_OUTPUT
-                  PREV_VERSION=$(git show origin/main:package.json | jq -r '.version')
+                  PREV_VERSION=$(git show origin/main:src/package.json | jq -r '.version')
                   echo "prev_version=$PREV_VERSION" >> $GITHUB_OUTPUT
                   echo "version=$VERSION"
                   echo "prev_version=$PREV_VERSION"
-
-            # Update CHANGELOG.md with proper format
+              # Update CHANGELOG.md with proper format
             - name: Update Changelog Format
               if: ${{ !contains(github.event.pull_request.labels.*.name, 'changelog-ready') }}
               env:
                   VERSION: ${{ steps.get_version.outputs.version }}
                   PREV_VERSION: ${{ steps.get_version.outputs.prev_version }}
-              run: python .github/scripts/overwrite_changeset_changelog.py
+              run: |
+                  echo "Running changelog formatting script..."
+                  echo "VERSION: $VERSION"
+                  echo "PREV_VERSION: $PREV_VERSION"
+                  echo "Current changelog start:"
+                  head -20 CHANGELOG.md
+                  echo "===================="
+                  python .github/scripts/overwrite_changeset_changelog.py
+                  echo "===================="
+                  echo "Updated changelog start:"
+                  head -20 CHANGELOG.md
 
             # Commit and push changelog updates
             - name: Push Changelog updates
@@ -138,21 +135,14 @@ jobs:
 
             # Add label to indicate changelog has been formatted
             - name: Add changelog-ready label
-              if: ${{ !contains(github.event.pull_request.labels.*.name, 'changelog-ready') }}
+              if: ${{ steps.changesets.outputs.pullRequestNumber && !contains(github.event.pull_request.labels.*.name, 'changelog-ready') }}
               uses: actions/github-script@v7
               with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  github-token: ${{ secrets.CROSS_REPO_ACCESS_TOKEN }}
                   script: |
                       await github.rest.issues.addLabels({
                         owner: context.repo.owner,
                         repo: context.repo.repo,
-                        issue_number: context.issue.number,
+                        issue_number: ${{ steps.changesets.outputs.pullRequestNumber }},
                         labels: ['changelog-ready']
                       });
-
-            # Auto-approve PR only after it has been labeled
-            - name: Auto approve PR
-              if: contains(github.event.pull_request.labels.*.name, 'changelog-ready')
-              uses: hmarr/auto-approve-action@v4
-              with:
-                  review-message: "I'm approving since it's a bump version PR"
