✨ feat(git-commit): add AI-powered git commit message generation   - Introduce `GitCommitMessageProvider` to generate commit messages using AI   - Register new command `kilo-code.generateCommitMessage` in package.json   - Add language support for new command title in localization files
✅ test(git-commit): add unit tests for GitCommitMessageProvider
  - Mock vscode and dependencies for testing GitCommitMessageProvider
  - Test activation, message generation, and error handling scenarios
  - Validate internal methods like `getChangeStatusText` and `cleanCommitMessage`

--- a/src/package.json
+++ b/src/package.json
@@ -229,6 +229,12 @@
 				"title": "%command.profile.title%",
 				"icon": "$(account)",
 				"category": "%configuration.title%"
+			},
+			{
+				"command": "kilo-code.generateCommitMessage",
+				"title": "%command.generateCommitMessage.title%",
+				"icon": "$(sparkle)",
+				"category": "%configuration.title%"
 			}
 		],
 		"keybindings": [
@@ -357,6 +363,19 @@
 					"command": "kilo-code.helpButtonClicked",
 					"group": "navigation@6",
 					"when": "activeWebviewPanelId == kilo-code.TabPanelProvider"
+				}
+			],
+			"scm/input": [
+				{
+					"command": "kilo-code.generateCommitMessage",
+					"group": "navigation"
+				}
+			],
+			"scm/title": [
+				{
+					"command": "kilo-code.generateCommitMessage",
+					"when": "scmProvider == git",
+					"group": "navigation"
 				}
 			]
 		},
