✨ feat(icons): add new kilo icons for theme support
- introduce kilo-dark.svg and kilo-light.svg to assets/icons
- support both dark and light themes for better visual integration

🔧 chore(package): update package.json with theme icons

- modify command icon to use new theme-specific SVGs in package.json
- enhance UI customization by linking light and dark icons

--- a/src/package.json
+++ b/src/package.json
@@ -233,7 +233,10 @@
 			{
 				"command": "kilo-code.generateCommitMessage",
 				"title": "%command.generateCommitMessage.title%",
-				"icon": "$(sparkle)",
+				"icon": {
+					"light": "assets/icons/kilo-light.svg",
+					"dark": "assets/icons/kilo-dark.svg"
+				},
 				"category": "%configuration.title%"
 			}
 		],
