--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -86,8 +86,9 @@
 		"@storybook/blocks": "^8.5.6",
 		"@storybook/react": "^8.5.6",
 		"@storybook/react-vite": "^8.5.6",
+		"@testing-library/dom": "^10.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
+		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/jest": "^29.0.0",
 		"@types/node": "^18.0.0",
