--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
+		"generate-theme-styles": "node scripts/generate-vscode-themes.js",
 		"storybook": "storybook dev -p 6006",
 		"build": "storybook build",
 		"preview": "storybook preview",
@@ -37,6 +38,8 @@
 		"@types/react-dom": "^18.3.5",
 		"@types/styled-components": "^5.1.34",
 		"@vitejs/plugin-react": "^4.3.4",
+		"jsonc-parser": "^3.3.1",
+		"node-fetch": "2",
 		"rimraf": "^6.0.1",
 		"storybook": "^8.4.7",
 		"tailwindcss-animate": "^1.0.7",
