--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -13,12 +13,14 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.2",
+		"@tanstack/react-query": "^5.62.7",
 		"@vscode/codicons": "^0.0.36",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.513.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"seedrandom": "^3.0.5",
 		"shiki": "^3.2.1",
 		"styled-components": "^6.1.13",
 		"tailwind-merge": "^2.6.0",
@@ -37,6 +39,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/react": "^18.3.23",
 		"@types/react-dom": "^18.3.5",
+		"@types/seedrandom": "^3.0.8",
 		"@types/styled-components": "^5.1.34",
 		"@vitejs/plugin-react": "^4.3.4",
 		"chromatic": "^13.0.0",
