--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -80,6 +80,11 @@
 		"@jest/globals": "^29.7.0",
 		"@roo-code/config-eslint": "workspace:^",
 		"@roo-code/config-typescript": "workspace:^",
+		"@storybook/addon-essentials": "^8.4.7",
+		"@storybook/addon-interactions": "^8.4.7",
+		"@storybook/react": "^8.4.7",
+		"@storybook/react-vite": "^8.4.7",
+		"@storybook/testing-library": "^0.2.2",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -95,6 +100,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-simple-dot-reporter": "^1.0.5",
+		"storybook": "^8.4.7",
 		"ts-jest": "^29.2.5",
 		"typescript": "5.8.3",
 		"vite": "6.3.5"
