--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,4 @@
-use flake
+# Check if nix command is available before trying to use flake
+if command -v nix >/dev/null 2>&1; then
+    use flake
+fi
