--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -32,6 +32,7 @@
 		"@roo-code/types": "workspace:^",
 		"@tailwindcss/vite": "^4.0.0",
 		"@tanstack/react-query": "^5.68.0",
+		"@types/seedrandom": "^3.0.8",
 		"@vscode/codicons": "^0.0.36",
 		"@vscode/webview-ui-toolkit": "^1.4.0",
 		"axios": "^1.7.4",
@@ -66,6 +67,7 @@
 		"remark-gfm": "^4.0.1",
 		"remark-math": "^6.0.0",
 		"remove-markdown": "^0.6.0",
+		"seedrandom": "^3.0.5",
 		"shell-quote": "^1.8.2",
 		"shiki": "^3.2.1",
 		"source-map": "^0.7.4",
@@ -103,9 +105,9 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-simple-dot-reporter": "^1.0.5",
+		"jsdom": "^26.0.0",
 		"storybook": "^8.4.7",
 		"ts-jest": "^29.2.5",
-		"jsdom": "^26.0.0",
 		"typescript": "5.8.3",
 		"vite": "6.3.5",
 		"vitest": "^3.2.3"
